make sure that there is no linebreak in the 'search row' of yui tables

--- a/bungeni.portal/trunk/bungeni/portal/static/html/resources/90-forms.css
+++ b/bungeni.portal/trunk/bungeni/portal/static/html/resources/90-forms.css
@@ -282,6 +282,9 @@ float: right;
 width: 70%;
 }
 
+tr.yui-dt-last th {
+white-space: nowrap; 
+}
 
 
 /*  */
